<?xml version="1.0" encoding="utf-8"?>

<com.example.urpet.Utils.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/full_swipe_notificacion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:dragFromEdge="right">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_comida_borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/trash_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:tint="@color/ripple_color"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/trash_icon"
            app:layout_constraintStart_toStartOf="@+id/trash_icon"
            app:layout_constraintTop_toBottomOf="@+id/trash_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_comida_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nombre_comida"
        android:textColor="@color/texto_color_negro"
        android:textSize="@dimen/texto_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_comida_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/texto_color_negro"
        android:textSize="@dimen/texto_default"
        android:text="@string/grupo_abierto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_comida_titulo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/item_comida_tamaño"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edicion_de"
        android:textColor="@color/texto_color_negro"
        android:textSize="@dimen/texto_default"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_comida_descripcion" />

    <TextView
        android:id="@+id/item_comida_fecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/adquirido"
        android:textColor="@color/texto_color_negro"
        android:textSize="@dimen/texto_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/item_comida_descripcion" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.example.urpet.Utils.SwipeRevealLayout>