<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_agenda_cerrar_iv"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/agendar_titulo"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/titulos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/agendar_instrucciones"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/texto_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/fragment_agendar_nombre_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:hint="@string/agendar_hint_nombre"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/fragment_agendar_nombre_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_agendar_nombre_et"
                app:layout_constraintTop_toBottomOf="@+id/fragment_agendar_nombre_et" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/fragment_agenda_inicio_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_agenda_inicio_et"
                app:layout_constraintTop_toBottomOf="@+id/fragment_agenda_inicio_et" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/fragment_agendar_nombre_et" />

            <EditText
                android:id="@+id/fragment_agenda_inicio_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:focusable="false"
                android:hint="@string/agendar_inicio"
                android:inputType="none"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/fragment_agendar_nombre_et"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/fragment_agenda_inicio_et" />

            <EditText
                android:id="@+id/fragment_agenda_fin_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:focusable="false"
                android:hint="@string/agendar_fin"
                android:inputType="none"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="@+id/fragment_agendar_nombre_et"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/fragment_agenda_fin_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_agenda_fin_et"
                app:layout_constraintTop_toBottomOf="@+id/fragment_agenda_fin_et" />

            <Button
                android:id="@+id/fragment_agenda_aceptar_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/btn"
                android:elevation="15dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/agendar_btn"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textColorLink="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_agenda_fin_et" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>