<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_comida_cerrar_iv"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/agregar_comida"
                android:textColor="@color/texto_color_negro"
                android:textSize="@dimen/titulos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/comida_instrucciones"
                android:textColor="@color/texto_color_negro"
                android:textSize="@dimen/texto_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/fragment_nueva_comida_nombre_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:inputType="text"
                android:hint="@string/comida_hint_nombre"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/fragment_nueva_comida_nombre_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_nueva_comida_nombre_et"
                app:layout_constraintTop_toBottomOf="@+id/fragment_nueva_comida_nombre_et" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/fragment_comida_presentacion_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_comida_presentacion_et"
                app:layout_constraintTop_toBottomOf="@+id/fragment_comida_presentacion_et" />


            <EditText
                android:id="@+id/fragment_comida_presentacion_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:hint="@string/presentacion_comida"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/fragment_nueva_comida_nombre_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_nueva_comida_descr_et"
                app:layout_constraintTop_toBottomOf="@+id/view12" />

            <EditText
                android:id="@+id/fragment_nueva_comida_descr_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:hint="@string/descripcion_nueva_comida"
                android:inputType="textLongMessage"
                android:minLines="3"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/fragment_nueva_comida_nombre_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_nueva_comida_nombre_et"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <View
                android:id="@+id/view12"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/fragment_nueva_comida_descr_et"
                app:layout_constraintStart_toStartOf="@+id/fragment_nueva_comida_descr_et"
                app:layout_constraintTop_toBottomOf="@+id/fragment_nueva_comida_descr_et" />

            <Button
                android:id="@+id/fragment_comida_aceptar_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/btn"
                android:elevation="15dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/agregar_comida"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textColorLink="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>